--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <script src="https://cdn.jsdelivr.net/npm/osc-js@2.0.2/lib/osc.min.js"></script>
   <script>
 
-    var socket = io();
+    var socket = io('https://socketioandosc.herokuapp.com/:8080');
     var el = document.getElementById('server-time');
     socket.on('time', function(timeString) {
       el.innerHTML = 'Server time: ' + timeString;
